Closed
Bug 1163375
Opened 11 years ago
Closed 11 years ago
[e10s] Drag&Drop a file to gmail compose dialog is broken
Categories
(Core :: DOM: Events, defect)
Tracking
()
VERIFIED
FIXED
mozilla41
People
(Reporter: alice0775, Assigned: mossop)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
1.44 KB,
patch
|
Sylvestre
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
[Tracking Requested - why for this release]: regression
Reported http://forums.mozillazine.org/viewtopic.php?p=14149763#p14149763
Steps To Reproduce:
1. Start Nightly with e10s
2. Login gmail.com
3. Click [COMPOSE] red button at the left sidebar
--- Compose dialog pops up
4. Drag & Drop a file from explorer onto the Compose dialog popup
Actual Results:
Attachment failed.
Expected Results:
Drag & Drop a file should be performed successfully.
Pushlog:
https://hg.mozilla.org/integration/fx-team/pushloghtml?fromchange=b9d40b34df46&tochange=b62e2d74176f
Regressed by: b62e2d74176f Dave Townsend — Bug 1160279: Recreate nsIFiles in the content process for dragged files. r=smaug
| Reporter | ||
Updated•11 years ago
|
OS: Unspecified → Windows 7
| Reporter | ||
Comment 1•11 years ago
|
||
I can eproduced on ubuntu14.04 too. And I confirmed same regression range.
OS: Windows 7 → All
| Reporter | ||
Updated•11 years ago
|
Flags: needinfo?(dtownsend)
| Assignee | ||
Comment 2•11 years ago
|
||
I've backed out bug 1160279 to fix this.
Status: NEW → RESOLVED
Closed: 11 years ago
Flags: needinfo?(dtownsend)
Resolution: --- → FIXED
Adding firefox40:+ tracking flag. And set firefox40-affected to "Fixed" based on comment #2.
| Assignee | ||
Comment 4•11 years ago
|
||
That isn't accurate, the backout happened after the merge to aurora. Since this is e10s only I don't know if it is worth uplifting.
tracking-e10s:
? → ---
Comment 5•11 years ago
|
||
Dave, except if it can cause more regressions, it is worth uplifting it as we have now e10s proposed to our users on aurora.
Could you fill the uplift request? Thanks
Flags: needinfo?(dtownsend)
| Assignee | ||
Comment 6•11 years ago
|
||
Approval Request Comment
[Feature/regressing bug #]: Bug 1160279
[User impact if declined]: Drag and drop in some websites is broken on aurora without this backout
[Describe test coverage new/current, TreeHerder]: Backing this out was verified to fix the problem on nightly
[Risks and why]: Low
[String/UUID change made/needed]: None
Flags: needinfo?(dtownsend)
Attachment #8617512 -
Flags: approval-mozilla-aurora?
Updated•11 years ago
|
status-firefox41:
--- → fixed
Updated•11 years ago
|
Assignee: nobody → dtownsend
Updated•11 years ago
|
Attachment #8617512 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Updated•11 years ago
|
Target Milestone: --- → mozilla41
Comment 7•11 years ago
|
||
Updated•11 years ago
|
QA Whiteboard: [good first verify][verify in Nightly only]
Comment 8•11 years ago
|
||
I have reproduced this bug with Firefox Nightly 40.0a1(Build:20150510030207)on
windows 8.1 pro x64 with the instructions from comment 0 .
Verified as fixed with Latest Firefox Aurora 41.0a2(2015-02-01) (Build ID: 20150711004006)
Mozilla/5.0 (Windows NT 6.3; WOW64; rv:41.0) Gecko/20100101 Firefox/41.0
Verified as fixed with Latest Firefox Nightly 42.0a1(2015-02-01) (Build ID: 20150711030210)
Mozilla/5.0 (Windows NT 6.3; WOW64; rv:42.0) Gecko/20100101 Firefox/42.0
Comment 9•11 years ago
|
||
Reproduced with Nightly 40.0a1 (2015-05-10) (Build ID: 20150510030207) on Linux x64 by following comment 0's instruction!
The bug is fixed on Latest Nightly 42.0a1 (2015-07-12)
Build ID: 20150712030212
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:42.0) Gecko/20100101 Firefox/42.0
Status: RESOLVED → VERIFIED
status-firefox42:
--- → verified
Comment 10•10 years ago
|
||
I followed steps as per the comment0 but didn't see any issue. It worked well.
I tried to drag and drop the .png file to compose area/email body and it worked.
Then I tried to drag and drop the .png file to the attachment and it worked.
OS: Windows 7. x64.
Firefox Nightly 41.0a2
Gecko.buildID;20150731004008
[bugday-20150805]
You need to log in
before you can comment on or make changes to this bug.
Description
•