Bug 1163375 - Backout bug 1160279 to fix GMail drag & drop issues with e10s enabled. a=sledru