dom/ipc/ContentChild.cpp
@@ -2918,16 +2918,7 @@ ContentChild::RecvInvokeDragSession(nsTArray<IPCDataTransfer>&& aTransfers,
           } else if (item.data().type() == IPCDataTransferData::TPBlobChild) {
             BlobChild* blob = static_cast<BlobChild*>(item.data().get_PBlobChild());
             nsRefPtr<FileImpl> fileImpl = blob->GetBlobImpl();
-            nsString path;
-            ErrorResult result;
-            fileImpl->GetMozFullPathInternal(path, result);
-            if (result.Failed()) {
-              variant->SetAsISupports(fileImpl);
-            } else {
-              nsCOMPtr<nsIFile> file;
-              NS_NewNativeLocalFile(NS_ConvertUTF16toUTF8(path), true, getter_AddRefs(file));
-              variant->SetAsISupports(file);
-            }
+            variant->SetAsISupports(fileImpl);
           } else {
             continue;
           }
